--- a/website/templates/record.html
+++ b/website/templates/record.html
@@ -24,5 +24,7 @@
     <br />
     <a href="{% url 'home' %}" class="btn btn-secondary">Back</a>
 
+    <a href="{% url 'delete_record' customer_record.id %}" class="btn btn-danger">Delete</a>
+
 
 {% endblock %}
