--- a/website/templates/add_record.html
+++ b/website/templates/add_record.html
@@ -6,7 +6,7 @@
         <h1>Add Record</h1>
         <br />
 
-        <form method="POST" action="{% url 'home' %}">
+        <form method="POST" action="{% url 'add_record' %}">
             {% csrf_token %}
             {{ form.as_p }}
 
