--- a/website/templates/add_record.html
+++ b/website/templates/add_record.html
@@ -10,7 +10,7 @@
             {% csrf_token %}
             {{ form.as_p }}
 
-
+                <a href="{% url 'home' %}" class="btn btn-secondary">Back</a>
                 <button type="submit" class="btn btn-secondary">Add Record</button>
 
         </form>
